Replaces placeholder with image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         </p>
                         <button>Sign up</button>
                     </div>
-                    <div class="gray">this is a placeholder for an image</div>
+                    <img src="coffee.jpg" class="coffee">
                 </div>
             </div>
             <div class="white1"></div>
