Second Row finished

--- a/index.html
+++ b/index.html
@@ -27,7 +27,28 @@
                     <img src="coffee.jpg" class="coffee">
                 </div>
             </div>
-            <div class="white1"></div>
+            <div class="white1">
+                <div class="infoheader">Some random information.</div>
+                <div class="images">
+                    <div class="random">
+                        <div><img src="img1.jpg" class="pic"></div>
+                        <p>this is some subtext unnder illustration or image</p>
+                    </div>
+                    <div class="random">
+                        <div><img src="img2.jpg" class="pic"></div>
+                        <p>this is some subtext unnder illustration or image</p>
+                    </div>
+                    <div class="random">
+                        <div><img src="img3.jpg" class="pic"></div>
+                        <p>this is some subtext unnder illustration or image</p>
+                    </div>
+                    <div class="random">
+                        <div><img src="img4.jpg" class="pic"></div>
+                        <p>this is some subtext unnder illustration or image</p>
+                    </div>
+                </div>
+            </div>
+
             <div class="darkgrey"></div>
             <div class="white2"></div>
         </div>    
