--- a/index.html
+++ b/index.html
@@ -49,7 +49,15 @@
                 </div>
             </div>
 
-            <div class="darkgrey"></div>
+            <div class="darkgrey">
+                <div class="quote">
+                    <p>This is an inspiring quote, or a testimonial from a customer. 
+                    Maybe its just filling up space, or maybe people will actually read it. Who knows?
+                    All I know is that it looks nice.
+                    </p>
+                    <div class="thor">-Thor, God of Thunder.</div>
+                </div>
+            </div>
             <div class="white2"></div>
         </div>    
     </body>
