--- a/index.html
+++ b/index.html
@@ -58,7 +58,15 @@
                     <div class="thor">-Thor, God of Thunder.</div>
                 </div>
             </div>
-            <div class="white2"></div>
+            <div class="white2">
+                <div class="blue">
+                    <div class="msg">
+                        <div class="thick">Call to action! It's time!</div>
+                        <div class="thin">Signup for our product by clicking that button right over there!</div>
+                    </div>
+                    <button>Sign up</button>
+                </div>
+            </div>
         </div>    
     </body>
 </html>
