Complete Landing Page

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                     <button>Sign up</button>
                 </div>
             </div>
+            <div class="copy">
+                <p>Copy right &copy; The odin project 2021</p>
+            </div>
         </div>    
     </body>
 </html>
